--- a/index.html
+++ b/index.html
@@ -8,8 +8,27 @@
     <link rel="stylesheet" href="css/bootstrap.css">
 </head>
 <body>
-    
+    <section class="hero">
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    col
+                </div>
+
+                <div class="col">
+                    <img width="600" src="img/hero.jpg" alt="">
+                </div>
+            </div>
+        </div>
+    </section>
+
 
     <script type="text/javascript" src="js/bootstrap.js"></script>
 </body>
 </html>
+
+<!--
+    Referensi:
+    https://css-tricks.com
+
+-->
