Typography Web Design

--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
         <div class="container">
             <div class="row">
                 <div class="col">
-                    col
+                    <h1>The Design Thinking Superpowers</h1>
+                    <p>
+                        Tools, tutorials, design and innovation exsport, all in one place! The most intuitive way to imagine your next experinces.
+                    </p>
+                    <a class="btn btn-primary" href="#" role="button">Get Started</a>
                 </div>
 
                 <div class="col">
