Eye-Catching Design

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <div class="container">
             <div class="row">
                 <div class="col">
-                    <h1>The Design Thinking Superpowers</h1>
-                    <p>
+                    <h1 class="mb-4">The Design Thinking Superpowers</h1>
+                    <p class="mb-4">
                         Tools, tutorials, design and innovation exsport, all in one place! The most intuitive way to imagine your next experinces.
                     </p>
                     <a class="btn btn-primary" href="#" role="button">Get Started</a>
