Flexbox Align Items

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <section class="hero">
         <div class="container">
             <div class="row">
-                <div class="col">
+                <div class="col align-self-center">
                     <h1 class="mb-4">The Design Thinking Superpowers</h1>
                     <p class="mb-4">
                         Tools, tutorials, design and innovation exsport, all in one place! The most intuitive way to imagine your next experinces.
