--- a/index.html
+++ b/index.html
@@ -23,18 +23,20 @@
               </button>
               <div class="collapse navbar-collapse d-flex justify-content-end" id="navbarNav">
                 <ul class="navbar-nav ">
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Product</a>
+                  <li class="nav-item align-self-center">
+                    <a class="nav-link active " aria-current="page" href="#">Product</a>
                   </li>
-                  <li class="nav-item">
+                  <li class="nav-item align-self-center">
                     <a class="nav-link" href="#">Customers</a>
                   </li>
-                  <li class="nav-item">
+                  <li class="nav-item align-self-center">
                     <a class="nav-link" href="#">Pricing</a>
                   </li>
-                  <li class="nav-item">
+                  <li class="nav-item align-self-center">
                     <a class="nav-link" href="#">Resources</a>
                   </li>
+                  <a class="btn btn-secondary px-4 ms-5" href="#" role="button">Sign In</a>
+                  <a class="btn btn-primary px-4 ms-3" href="#" role="button">Sign Up</a>
                   
                 </ul>
               </div>
