--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
-              <div class="collapse navbar-collapse d-flex justify-content-end" id="navbarNav">
-                <ul class="navbar-nav ">
+              <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto ">
                   <li class="nav-item align-self-center">
                     <a class="nav-link active " aria-current="page" href="#">Product</a>
                   </li>
@@ -55,7 +55,7 @@
                     <a class="btn btn-primary" href="#" role="button">Get Started</a>
                 </div>
 
-                <div class="col">
+                <div class="col d-none d-sm-block">
                     <img width="600" src="img/hero.jpg" alt="">
                 </div>
             </div>
